crates/reinhardt-pages/tests/ui/server_fnset/feature_boundary/fail/model_contract_requires_feature.rs
use reinhardt_pages::server_fn::ModelServerFnResource;

fn assert_model_resource<R: ModelServerFnResource>() {}

fn main() {}
